# fastapi_mongo_test

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  mongodb-config  pyproject.toml
src/: forms.json  insert_data.py  main.py
src/forms/: models.py  router.py
src/mongo/: __init__.py  client.py
src/settings/: settings.py
src/utils/: __init__.py  validator.py
