[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["bahmutov_av"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.104.1"}
pymongo = "^4.6.0"
phonenumbers = "^8.13.24"
motor = "^3.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
